5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4413/executions/1791_1615.log
== TEST (2019-05-29 14:39:20) 
-- CODE:
from numpy import*
v1 = array(eval(int(input("aneis do primeiro jogador: "))))
v2 = array(eval(int(input("aneis do segundo jogador: "))))


	if(sum(v1[i])< sum(v2[i])):
		msg="jogador um"
	elif(sum(v2[i])<sum(v1[i])):
		msg="jogador dois"
	else:
		msg="empate"
		
print(upper(msg))

-- ERROR:
File "XXXX", line 6
    if(sum(v1[i])< sum(v2[i])):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:39:45) 
-- CODE:
from numpy import*
v1 = array(eval(int(input("aneis do primeiro jogador: "))))
v2 = array(eval(int(input("aneis do segundo jogador: "))))


	if(sum(v1)< sum(v2)):
		msg="jogador um"
	elif(sum(v2)<sum(v1)):
		msg="jogador dois"
	else:
		msg="empate"
		
print(upper(msg))

-- ERROR:
File "XXXX", line 6
    if(sum(v1)< sum(v2)):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:40:08) 
-- CODE:
from numpy import*
v1 = array(eval(int(input("aneis do primeiro jogador: "))))
v2 = array(eval(int(input("aneis do segundo jogador: "))))


	if(sum(v1) < sum(v2)):
		msg="jogador um"
	elif(sum(v2) < sum(v1)):
		msg="jogador dois"
	else:
		msg="empate"
		
print(upper(msg))

-- ERROR:
File "XXXX", line 6
    if(sum(v1) < sum(v2)):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:40:55) 
-- CODE:
from numpy import*
v1 = array(eval(int(input("aneis do primeiro jogador: "))))
v2 = array(eval(int(input("aneis do segundo jogador: "))))


if(sum(v1) < sum(v2)):
		msg="jogador um"
		elif(sum(v2) < sum(v1)):
			msg="jogador dois"
else:
	msg="empate"
		
print(upper(msg))

-- ERROR:
File "XXXX", line 8
    elif(sum(v2) < sum(v1)):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:41:20) 
-- CODE:
from numpy import*
v1 = array(eval(int(input("aneis do primeiro jogador: "))))
v2 = array(eval(int(input("aneis do segundo jogador: "))))


if(sum(v1) < sum(v2)):
	msg="jogador um"
elif(sum(v2) < sum(v1)):
	msg="jogador dois"
else:
	msg="empate"
		
print(upper(msg))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:41:35) 
-- CODE:
from numpy import*
v1 = array(eval(int(input("aneis do primeiro jogador: "))))
v2 = array(eval(int(input("aneis do segundo jogador: "))))


if(sum(v1) < sum(v2)):
	msg="jogador um"
elif(sum(v2) < sum(v1)):
	msg="jogador dois"
else:
	msg="empate"
		
print(upper(msg))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:42:24) 
-- CODE:
from numpy import*
v1 = array(eval(int(input("aneis do primeiro jogador: "))))
v2 = array(eval(int(input("aneis do segundo jogador: "))))
dtype=int

if(sum(v1) < sum(v2)):
	msg="jogador um"
elif(sum(v2) < sum(v1)):
	msg="jogador dois"
else:
	msg="empate"
		
print(upper(msg))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:42:27) 
-- CODE:
from numpy import*
v1 = array(eval(int(input("aneis do primeiro jogador: "))))
v2 = array(eval(int(input("aneis do segundo jogador: "))))
dtype=int

if(sum(v1) < sum(v2)):
	msg="jogador um"
elif(sum(v2) < sum(v1)):
	msg="jogador dois"
else:
	msg="empate"
		
print(upper(msg))

-- EXECUTION TIME:
0.52545
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1615/main.py", line 2, in <module>
    v1 = array(eval(int(input())))
ValueError: invalid literal for int() with base 10: '[3,2,1,1]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:42:30) 
-- CODE:
from numpy import*
v1 = array(eval(int(input("aneis do primeiro jogador: "))))
v2 = array(eval(int(input("aneis do segundo jogador: "))))
dtype=int

if(sum(v1) < sum(v2)):
	msg="jogador um"
elif(sum(v2) < sum(v1)):
	msg="jogador dois"
else:
	msg="empate"
		
print(upper(msg))

-- EXECUTION TIME:
0.432139
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1615/main.py", line 2, in <module>
    v1 = array(eval(int(input())))
ValueError: invalid literal for int() with base 10: '[3,2,1,1]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:42:37) 
-- CODE:
from numpy import*
v1 = array(eval(int(input("aneis do primeiro jogador: "))))
v2 = array(eval(int(input("aneis do segundo jogador: "))))
dtype=int

if(sum(v1) < sum(v2)):
	msg="jogador um"
elif(sum(v2) < sum(v1)):
	msg="jogador dois"
else:
	msg="empate"
		
print(upper(msg))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:42:48) 
-- CODE:
from numpy import*
v1 = array(eval(int(input("aneis do primeiro jogador: "))))
v2 = array(eval(int(input("aneis do segundo jogador: "))))
dtype=int

if(sum(v1) < sum(v2)):
	msg="jogador um"
elif(sum(v2) < sum(v1)):
	msg="jogador dois"
else:
	msg="empate"
		
print(upper(msg))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
